atualização, primeiro envio planilha estoque

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 <body>
     <div class="div_cabecalho">
-        <h1 class="title_site">Stillus Home - Estoque</h1>
+        <img src="stillus-logo-1024x1024.png" alt="" class="image_logo">
+        <hr>
+        <h2>ESTOQUE</h2>
     </div>
     <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTtyvlJbcH3a7V_5pgffxTOR8r4B6wE4ZsVm8F14ecqZnbnpPsc2NLJFRcHHNDkfQ/pubhtml?widget=true&amp;headers=false"></iframe>
     
